--- a/Alpha/AlphaMvc/Views/ExpiredTechnician1/ExpiredTechnician1.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpiredTechnician1/ExpiredTechnician1.cshtml
@@ -50,9 +50,11 @@
                 <th class="thgray">No.</th>
                 <th class="thgray hidecolumn">TechnicianID</th>
                 <th class="thgray">ชื่อ-นามสกุล</th>
-                <th class="thgray hideANDseek">ตำแหน่ง</th>
+                @*<th class="thgray hideANDseek">ตำแหน่ง</th>*@
+                <th class="thgray">ตำแหน่ง</th>
                 <th class="thgray">ประเภทพนักงาน</th>
-                <th class="thgray hideANDseek">เลขที่บัตร</th>
+                @*<th class="thgray hideANDseek">เลขที่บัตร</th>*@
+                <th class="thgray">เลขที่บัตร</th>
                 <th class="thgray">วันหมดอายุ</th>
                 <th class="thgray hidecolumn">ประเภทบัตร</th>
                 <th class="thgray">บริษัท</th>
