--- a/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
@@ -73,7 +73,7 @@
         <form id="myform">
             <ul class="form-style-1">
                 <li>
-                    <label class="label-2" >Serial Number</label>
+                    <label class="label-2 float-none" >Serial Number</label>
                 </li>
                 <li>
                     <input type="text" id="txtSerialNo" name="field_1" class="field-divided" placeholder="" required disabled />&nbsp;<a href="#" data-toggle="modal" data-target="#productsDialog" onclick="BrowseProducts()">
