--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -123,7 +123,7 @@
                             <div class="short-div">
                                 @*Span 4*@
                                 <div class="form-group">
-                                    <label for="dtReceiveDate">รับเข้า:</label>
+                                    <label for="dtReceiveDate">รับเข้า:<span class="required">*</span></label>
                                     <input type="text" id="dtReceiveDate" class="form-control" placeholder="" required />
                                 </div>
                             </div>
