--- a/Alpha/AlphaMvc/Views/Shared/Login.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/Login.cshtml
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         @*<meta http-equiv="Refresh" content="0; url=myurl">*@
-        <title>@ViewBag.Title - My ASP.NET MVC Application</title>
+        <title>@ViewBag.Title</title>
         <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
         <link href="@Url.Content("~/Content/Style.css")" rel="stylesheet" type="text/css" />
         <link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
