--- a/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
@@ -40,7 +40,7 @@
                 </li>
                 <br />
             </ul>
-            <div class="tbresponsive">
+            <div class="manDIV">
                 <table id="tblWageTechnician" class="table table-striped">
                     <thead class="bgthead">
                         <tr>
