--- a/Alpha/AlphaMvc/Content/LoginStyle.css
+++ b/Alpha/AlphaMvc/Content/LoginStyle.css
@@ -116,6 +116,15 @@ span.psw {
 }
 
 /* Change styles for span and cancel button on extra small screens */
+@media (max-width: 767px) {
+    form {
+        /*border: 2px solid #298db2;*/
+        background-color: #fafae5;
+        margin-top: 5%;
+        margin-left: 15%;
+        width: 70%;
+    }
+}
  @media screen and (max-width:680px){
     form {
         /*border: 2px solid #298db2;*/
