--- a/Alpha/AlphaMvc/Content/editable/addrowstyle.css
+++ b/Alpha/AlphaMvc/Content/editable/addrowstyle.css
@@ -179,7 +179,14 @@
         border: none;
     }
     .myDIV {
-        width:inherit;
+        /*width:inherit;*/
+        width: 590px;
+        overflow-x: auto !important;
+    }
+    .manDIV {
+        /*width:inherit;*/
+        width: 590px;
+        overflow-x: auto !important;
     }
     .DialogDiv
     {
@@ -721,7 +728,17 @@ select{
 .form-style .required{
     color:red;
 }
-
+@media screen and  (min-width:767px) {
+    .myDIV {
+        width: inherit;
+        /*overflow-x: auto !important;*/
+     }
+    .manDIV {
+        /*width:inherit;*/
+        width: 1200px;
+        overflow-x: auto !important;
+    }
+}
 @media screen and (max-width:680px) {
     .imgpreview{
         /*width: 248px;*/
@@ -804,6 +821,11 @@ select{
     .myDIV {
         width:300px;
         overflow-x:auto;
+    }
+    .manDIV {
+        /*width:inherit;*/
+        width: 300px;
+        overflow-x: auto !important;
     }
     .DialogDiv
     {
