--- a/Alpha/AlphaMvc/Reports/RptBDC.rdlc
+++ b/Alpha/AlphaMvc/Reports/RptBDC.rdlc
@@ -1202,7 +1202,6 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -1279,7 +1278,9 @@
                           <TextRuns>
                             <TextRun>
                               <Value>=Fields!Qty.Value</Value>
-                              <Style />
+                              <Style>
+                                <Format>f1</Format>
+                              </Style>
                             </TextRun>
                           </TextRuns>
                           <Style>
@@ -1300,6 +1301,7 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
