--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -735,6 +735,7 @@
                                             </table>
                                         </div>
                                         <button id="add-row2" class="btn btn-primary" onclick="SetRowIndex()" onblur="SetRowIndex()" onmouseout="AddrowManpower()">Add Row</button><br /><br />
+                                        @*<button id="add-row2" class="btn btn-primary" onclick="AddrowManpower()" onblur="SetRowIndex()">Add Row</button><br /><br />*@
                                         <table >
                                             <tr>
                                                 <td>
