--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -2,6 +2,12 @@
     -webkit-appearance: none;
     display: none;
 }
+.padtop15{
+    padding-top: 15px;
+}
+.padtop20{
+    padding-top: 20px;
+}
 .margintop20{
     margin-top:20px !important;
 }
@@ -912,6 +918,10 @@ select{
         font-weight: bold;
         float: left;
         margin-right: 25%;
+    }
+        .mgn-right20
+    {
+        margin-right: 20% !important;
     }
 }
 .form-style-1 input[type=text]:focus, 
