--- a/Alpha/AlphaMvc/Content/bootstrap.css
+++ b/Alpha/AlphaMvc/Content/bootstrap.css
@@ -20,6 +20,12 @@
  */
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
+.mgn-top10{
+    margin-top:10px !important;
+}
+.mgn-top15{
+    margin-top:15px !important;
+}
 
 article,
 aside,
