--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -101,7 +101,7 @@
                     <input type="hidden" id="hidJobID" />
                 </li>
                 <li>
-                    <label class="label-2">วันเริ่มทำงาน<span class="required">*</span></label>&nbsp;<label class="label-2">วันจบงาน<span class="required">*</span></label>
+                    <label class="label-2 mgn-right20">วันเริ่มทำงาน<span class="required">*</span></label>&nbsp;<label class="label-2">วันจบงาน<span class="required">*</span></label>
                 </li>
                 <li>
                     <input type="text" id="dtSWorking" class="field-divided" placeholder="" required/>&nbsp;<input type="text" id="dtEWorking" class="field-divided" placeholder="" onchange="DateWorking()" required />
@@ -342,7 +342,7 @@
                                                             <ul class="form-style-1">
                                                                 <li>
                                                                     @*class="label-small-2"*@
-                                                                    <label>Manpower and Tool Cost</label>
+                                                                    <label>Tool Cost</label>
                                                                 </li>
                                                             </ul>
                                                         </td>
@@ -456,13 +456,13 @@
                                                 @*<button id="add-row7" onclick="AddRowExpense()" class="btn btn-primary">Add Row</button>*@
                                                 @*<div class="myDIV">*@
                                                 <div class="row">
-                                                    <div class="col-lg-12 col-md-2 col-sm-8 col-xs-12">
+                                                    <div class="col-lg-12 col-md-2 col-sm-8 col-xs-12 padtop20">
                                                         <div class="col-lg-4 col-md-2 col-sm-8 col-xs-12">
                                                             <label class="lblNoCompound">ราคาขายไม่รวม compound</label>
                                                         </div>
                                                         <div class="col-lg-4 col-md-2 col-sm-8 col-xs-12">
                                                             <div class="form-group">
-                                                                <input type="text" id="txtNoCompound" name="field6" class="text-size130 txtdisablerow" disabled />
+                                                                <input type="text" id="txtNoCompound" name="field6" class="text-size130 txtdisablerow" value="0" disabled />
                                                             </div>
                                                         </div>
                                                     </div>
@@ -470,7 +470,7 @@
                                                 <div class="row">
                                                     <div class="col-lg-12 col-md-2 col-sm-8 col-xs-12">
                                                         <div class="col-lg-4 col-md-2 col-sm-8 col-xs-12">
-                                                            <label class="lblExpense">ต้นทุน(Manpower and Tool Cost)</label>
+                                                            <label class="lblExpense">ต้นทุน (Tool Cost)</label>
                                                         </div>
                                                         <div class="col-lg-4 col-md-2 col-sm-8 col-xs-12">
                                                             <div class="form-group">
@@ -479,7 +479,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="row">
+                                                @*<div class="row">
                                                     <div class="col-lg-12 col-md-2 col-sm-8 col-xs-12">
                                                         <div class="col-lg-4 col-md-2 col-sm-8 col-xs-12">
                                                             <label class="lblExpense">ค่า Man Job (Tab Manpower)</label>
@@ -490,7 +490,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                </div>
+                                                </div>*@
                                                 <div class="row">
                                                     <div class="col-lg-12 col-md-2 col-sm-8 col-xs-12">
                                                         <div class="col-lg-4 col-md-2 col-sm-8 col-xs-12">
@@ -498,7 +498,7 @@
                                                         </div>
                                                         <div class="col-lg-4 col-md-2 col-sm-8 col-xs-12">
                                                             <div class="form-group">
-                                                                <input type="text" id="txtProfit" name="field6" class="text-size130 txtdisablerow" disabled />
+                                                                <input type="text" id="txtProfit" name="field6" class="text-size130 txtdisablerow" value="0" disabled />
                                                             </div>
                                                         </div>
                                                     </div>
@@ -510,7 +510,7 @@
                                                         </div>
                                                         <div class="col-lg-4 col-md-2 col-sm-8 col-xs-12">
                                                             <div class="form-group">
-                                                                <input type="text" id="txtProfitPersent" name="field6" class="text-size130 txtdisablerow" disabled />
+                                                                <input type="text" id="txtProfitPersent" name="field6" class="text-size130 txtdisablerow" value="0" disabled />
                                                             </div>
                                                         </div>
                                                     </div>
