--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -589,7 +589,7 @@
                                                                     <input id="chkSafety" class="chkSafety" type="checkbox" onchange="GetManJob('2')" style="margin-left: 20px; margin-right: 20px;" />
                                                                 </td>*@
                                                                 <td>
-                                                                    <input type="text" id="txtManPrice" class="ManPrice select-size50-height23 txtdisablerow" disabled />
+                                                                    <input type="text" id="txtManPrice" class="ManPrice select-size50-height23 txtdisablerow"/>
                                                                 </td>
                                                                 <td>
                                                                     <input id="txtCardID" type="text" value="" class="CardID text-size120 txtdisablerow" disabled />
@@ -675,7 +675,7 @@
                                                                     <input id="chkSafety" class="chkSafety" type="checkbox" onchange="GetManJob('2')" style="margin-left: 20px; margin-right: 20px;" />
                                                                 </td>*@
                                                                 <td>
-                                                                    <input type="text" id="txtManPrice" class="ManPrice select-size50-height23 txtdisablerow" disabled />
+                                                                    <input type="text" id="txtManPrice" class="ManPrice select-size50-height23 txtdisablerow"/>
                                                                 </td>
                                                                 <td>
                                                                     <input id="txtCardID" type="text" value="" class="CardID text-size120 txtdisablerow" disabled />
