--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -585,7 +585,7 @@
                                                             <input id="chkSafety" class="chkSafety"  onchange="GetManJob('2')" type="checkbox" style="margin-left: 20px; margin-right: 20px;" />
                                                         </td>*@
                                                         <td>
-                                                            <input type="text" id="txtManPrice" class="ManPrice select-size50-height23 txtdisablerow" disabled />
+                                                            <input type="text" id="txtManPrice" class="ManPrice select-size50-height23 txtdisablerow" />
                                                         </td>
                                                         <td class="hidecolumn">
                                                             <input id="ManpowerID" type="text" value="" class="ManpowerID" disabled />
@@ -689,7 +689,7 @@
                                                             <input id="chkSafety" class="chkSafety" type="checkbox"  onchange="GetManJob('2')" style="margin-left: 20px; margin-right: 20px;" />
                                                         </td>*@
                                                         <td>
-                                                            <input type="text" id="txtManPrice" class="ManPrice select-size50-height23 txtdisablerow" disabled />
+                                                            <input type="text" id="txtManPrice" class="ManPrice select-size50-height23 txtdisablerow" />
                                                         </td>
                                                         <td>
                                                             <input id="txtCardID" type="text" value="" class="text-left CardID text-size130 txtdisablerow" disabled />
